--- a/src/features/text/ui/text.css
+++ b/src/features/text/ui/text.css
@@ -1,13 +1,34 @@
 .ql-container.ql-snow {
-  border: 1px solid var(--color-primary-100);
-  height: fit-content;
+  width: 100%;
+  height: 100%;
+  border: none;
+  padding: 2em;
 }
 
 .ql-editor {
   padding: 0;
   font-size: 18px;
-  color: white;
-  overflow-y: visible;
+  color: var(--color-gray-200);
+  overflow-y: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ql-editor.ql-blank::before {
+  font-size: 20px;
+  color: var(--color-gray-300);
+  font-style: normal;
+  text-align: center;
+}
+
+.ql-editor > p {
+  min-width: 1px;
+  text-overflow: ellipsis;
+}
+
+.ql-editor.ql-blank:focus::before {
+  content: '';
 }
 
 .ql-toolbar {
