--- a/src/index.css
+++ b/src/index.css
@@ -38,9 +38,11 @@
   --color-red-500: #290012;
   --color-yellow-100: #ffa463;
   --color-yellow-500: #291400;
+  --color-gray-100: #d9d9d9;
   --color-gray-300: #838383;
-  --color-gray-400: #454548;
+  --color-gray-400: #323234;
   --color-gray-500: #121214;
+  --color-gray-600: #1a1a1e;
   --color-pink-100: #f86eff;
   --color-pink-500: #241827;
   --color-primary-100: #9039fb;
