--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 @layer utilities {
   .scrollbar::-webkit-scrollbar {
-    width: 10px;
+    width: 12px;
     height: 10px;
   }
 
@@ -15,13 +15,17 @@
   }
 
   .scrollbar::-webkit-scrollbar-thumb {
-    background: var(--color-blue-100);
-    border-radius: 100vh;
-    border: 3px solid var(--color-background-400);
+    background-color: var(--color-gray-400);
+    border: 3px solid transparent;
+    border-radius: 9px;
+    background-clip: content-box;
   }
 
   .scrollbar::-webkit-scrollbar-thumb:hover {
-    background: var(--color-blue-500);
+    background: var(--color-gray-300);
+    border: 3px solid transparent;
+    border-radius: 9px;
+    background-clip: content-box;
   }
 }
 
