--- a/src/features/text/ui/text.css
+++ b/src/features/text/ui/text.css
@@ -1,8 +1,8 @@
 .ql-container.ql-snow {
-  width: 100%;
-  height: 100%;
   border: none;
   padding: 1em;
+  width: 100%;
+  height: 100%;
 }
 
 .ql-editor {
@@ -10,13 +10,18 @@
   font-size: 18px;
   color: var(--color-gray-200);
   overflow-y: hidden;
+  min-width: 1px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-width: 1px;
+  text-align: center;
 }
 
 .ql-editor.ql-blank::before {
+  display: block;
+  position: static;
+  margin-bottom: -1.42em;
   font-size: 20px;
   color: var(--color-gray-300);
   font-style: normal;
@@ -29,7 +34,7 @@
 }
 
 .ql-editor.ql-blank:focus::before {
-  content: "";
+  content: "Add text";
 }
 
 .ql-toolbar {
